tests/ui/placeholder_with_bound.stderr
error[E0277]: the trait bound `i32: Trait` is not satisfied
 --> tests/ui/placeholder_with_bound.rs:8:8
  |
8 |     V1(i32)
  |        ^^^ the trait `Trait` is not implemented for `i32`
  |
help: this trait has no implementations, consider adding one
 --> tests/ui/placeholder_with_bound.rs:4:1
  |
4 | trait Trait {}
  | ^^^^^^^^^^^
  = help: see issue #48214
